[gd_scene load_steps=5 format=3 uid="uid://bova6oelvim41"]

[ext_resource type="Texture2D" uid="uid://c57h5y4k0il7l" path="res://Assets/Images/GUI/exp_background.png" id="1_i8yab"]
[ext_resource type="Script" path="res://Scenes/Utility/GUI.gd" id="1_njr27"]
[ext_resource type="Texture2D" uid="uid://g6tuww6k7fif" path="res://Assets/Images/GUI/exp_progress.png" id="2_l4uwh"]
[ext_resource type="Texture2D" uid="uid://dscc8otquwo33" path="res://Assets/Images/tape.png" id="3_axsg3"]

[node name="GUI_manager" type="CanvasLayer" groups=["gui"]]
script = ExtResource("1_njr27")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="xp_bar" type="TextureProgressBar" parent="GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("1_i8yab")
texture_progress = ExtResource("2_l4uwh")

[node name="Label_Level" type="Label" parent="GUI/xp_bar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = -3.0
offset_right = 106.0
offset_bottom = 20.0
text = "Level 1"
vertical_alignment = 1

[node name="time_bar" type="TextureProgressBar" parent="GUI" groups=["timebar"]]
layout_mode = 0
offset_top = 20.0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("1_i8yab")
texture_progress = ExtResource("2_l4uwh")

[node name="time_label" type="Label" parent="GUI/time_bar" groups=["timelabel"]]
layout_mode = 0
offset_left = 3.0
offset_top = -4.0
offset_right = 43.0
offset_bottom = 19.0
text = "time"

[node name="Sprite2D" type="Sprite2D" parent="GUI"]
position = Vector2(28, 66)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_axsg3")

[node name="Label" type="Label" parent="GUI/Sprite2D" groups=["loot_collected"]]
offset_left = 62.0
offset_top = -44.0
offset_right = 134.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 64
text = "x0"
